--- a/app/hallucination/index.module.css
+++ b/app/hallucination/index.module.css
@@ -1,4 +1,19 @@
 .background_div {
+  background-image: url("../public/background_wecdonald.webp");
+  background-size: cover;
   width: 100%;
   height: 100%;
+  background-position: center;
+  overflow: hidden;
+}
+.background_div::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 0;
+}
+.background_div > * {
+  position: relative;
+  z-index: 1;
 }
