--- a/app/hallucination/index.module.css
+++ b/app/hallucination/index.module.css
@@ -1,10 +1,17 @@
+@import "../global.css";
+
 .background_div {
   background-image: url("../public/background_wecdonald.webp");
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-position: center;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: min(3%, 4.19rem);
 }
 .background_div::before {
   content: "";
@@ -17,3 +24,4 @@
   position: relative;
   z-index: 1;
 }
+
