Feat: add motion library

--- a/app/hallucination/index.module.css
+++ b/app/hallucination/index.module.css
@@ -1,7 +1,7 @@
 @import "../global.css";
 
 .background_div {
-  background-image: url("../public/background_wecdonald.webp");
+  background-image: url("../public/background_.webp");
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -24,4 +24,3 @@
   position: relative;
   z-index: 1;
 }
-
