--- a/app/components/scenes/hallucination/Step1/index.module.css
+++ b/app/components/scenes/hallucination/Step1/index.module.css
@@ -1,25 +1,32 @@
 .content_wrapper {
   width: 100%;
   height: 100%;
+
+  padding-top: min(3%, 8rem);
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: (10%, 9rem);
+
+  gap: min(14%, 18rem);
 }
 
 .menu_container {
-  display: flex;
-  gap: min(4%, 6rem);
   width: 100%;
-  height: 40%;
+  height: min(44%, 66rem);
+  gap: min(4%, 6rem);
+
+  display: flex;
   justify-content: center;
 }
+
 .menu_box {
-  display: flex;
-  padding: min(2%, 4.25rem);
   width: min(16%, 55rem);
   height: min(100%, 66rem);
+
+  padding: min(2%, 4.25rem);
+
+  display: flex;
   justify-content: space-between;
   background-color: var(--color-primary-bg);
 
@@ -27,15 +34,12 @@
   border-color: var(--color-primary-red);
   border-width: min(12px, 2rem);
 }
+
 .menu_image {
+  width: 100%;
+  position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  width: 100%;
-
-  transition: transform 0.3s ease-in-out;
-}
-.menu_image:hover {
-  transform: scale(1.1);
 }
