--- a/app/components/MessageBox/index.module.css
+++ b/app/components/MessageBox/index.module.css
@@ -1,24 +1,24 @@
 .message_box {
-  width: min(81%, 196rem);
-  height: min(14.6%, 20rem);
+  width: min(81vw, 196rem);
+  height: min(16vh, 20rem);
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--color-primary-bg);
-  border-radius: 10.1875rem;
+  border-radius: 10rem;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .message {
   line-height: 150%;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.4rem;
   overflow: hidden;
-  padding: min(3%, 4.19rem);
+  padding: min(3vw, 4.19rem);
 }
 .next_icon {
   position: absolute;
-  right: min(2.5%, 8.4375rem);
-  width: min(5.51%, 13.3125rem);
+  right: min(2.5%, 8rem);
+  width: min(5.51%, 13rem);
   aspect-ratio: 1 / 1;
 }
