--- a/app/components/scenes/hallucination/Step3/index.module.css
+++ b/app/components/scenes/hallucination/Step3/index.module.css
@@ -24,47 +24,67 @@
   aspect-ratio: 1/1;
   z-index: var(--z-emoji);
 }
-
-.emoji_burger {
-  top: min(79%, 107rem);
-  left: min(23%, 51rem);
-}
-
 .emoji_onion {
   top: min(35%, 48rem);
   left: min(74%, 186rem);
 }
+.emoji_burger,
+.emoji_teddybear {
+  top: min(79%, 107rem);
+  left: min(23%, 51rem);
+}
 
-.emoji_bacon {
+.emoji_bacon,
+.emoji_meat {
   top: min(47%, 63rem);
   left: min(26%, 56rem);
 }
 
-.emoji_tomato {
+.emoji_tomato,
+.emoji_cylinder {
   top: min(70%, 90rem);
   left: min(6%, 11rem);
 }
-.emoji_bread {
+.emoji_bread,
+.emoji_lolly {
   top: min(40%, 54rem);
   left: min(8%, 19rem);
 }
-.emoji_bread {
-  top: min(40%, 54rem);
-  left: min(8%, 19rem);
-}
+
 .emoji_lettuce {
   top: min(53%, 68rem);
   left: min(84%, 208rem);
 }
-.emoji_fire {
+.emoji_fire,
+.emoji_germs {
   top: min(80%, 109rem);
   left: min(70%, 174rem);
 }
-.emoji_cheese {
+.emoji_cheese,
+.emoji_rainbow {
   top: min(75%, 101rem);
   left: min(88%, 208rem);
 }
-.emoji_burger1 {
+.emoji_burger2,
+.emoji_avocado {
   top: min(58%, 74rem);
   left: min(68%, 164rem);
+}
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(39, 0, 0, 0.8);
+  z-index: var(--z-upper-overlay);
+  pointer-events: none;
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.warning {
+  width: min(40%, 73rem);
+  aspect-ratio: 8/1;
+
+  position: relative;
 }
