--- a/app/components/scenes/hallucination/Step3/index.module.css
+++ b/app/components/scenes/hallucination/Step3/index.module.css
@@ -77,7 +77,7 @@
   z-index: var(--z-upper-overlay);
   pointer-events: none;
   display: flex;
-  flex-direction: center;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
