--- a/app/components/MessageBox/index.module.css
+++ b/app/components/MessageBox/index.module.css
@@ -9,6 +9,7 @@
   border-radius: 10rem;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   z-index: var(--z-message-box);
+  border: none;
 }
 .next_icon {
   position: absolute;
