--- a/app/components/MessageBox/index.module.css
+++ b/app/components/MessageBox/index.module.css
@@ -24,3 +24,12 @@
   overflow: hidden;
   padding: min(3vw, 4.19rem);
 }
+
+.message_gray {
+  line-height: 150%;
+  text-align: center;
+  font-size: min(1.3vw, 4rem);
+  overflow: hidden;
+  padding: min(3vw, 4.19rem);
+  color: #101010a1;
+}
