--- a/app/tokens.css
+++ b/app/tokens.css
@@ -4,6 +4,11 @@
   --color-primary-black: #000000;
   --color-primary-yellow: #ffdd0e;
 
+  --z-overlay: 20;
+  --z-message-box: 30;
+  --z-emoji: 10;
+  --z-upper-overlay: 40;
+
   --font-size-medium: clamp(12px, calc(100vw / 3840 * 64), 64px);
   --font-size-large: calc(var(--font-size-medium) * 1.25);
 }
