add chapter cover

--- a/app/tokens.css
+++ b/app/tokens.css
@@ -3,6 +3,7 @@
   --color-primary-red: #e30613;
   --color-primary-black: #000000;
   --color-primary-yellow: #ffdd0e;
+  --color-primary-white: #ffffff;
 
   --z-overlay: 20;
   --z-message-box: 30;
