--- a/app/tokens.css
+++ b/app/tokens.css
@@ -9,6 +9,7 @@
   --z-emoji: 10;
   --z-upper-overlay: 40;
 
+  --font-size-small: calc(var(--font-size-medium) * 0.5);
   --font-size-medium: clamp(12px, calc(100vw / 3840 * 64), 64px);
   --font-size-large: calc(var(--font-size-medium) * 1.25);
 }
